// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test given properties via argument calls should call with mount properties while given mount unit with additional properties 1`] = `
Object {
  "additionalMount.mount": Object {
    "ActiveEnterTimestamp": "",
    "ActiveEnterTimestampMonotonic": "",
    "ActiveState": "",
    "Delegate": "",
    "Description": "",
    "Id": "placeholderId",
    "LazyUnmount": false,
    "LoadState": "",
    "Result": "",
    "SubState": "",
    "Type": "",
    "UnitFileState": "",
    "UnitType": "mount",
    "What": "",
    "Where": "",
  },
}
`;

exports[`Test given properties via argument calls should call with mount properties while given plain mount unit 1`] = `
Object {
  "plainMount.mount": Object {
    "ActiveEnterTimestamp": "",
    "ActiveEnterTimestampMonotonic": "",
    "ActiveState": "",
    "Description": "",
    "Id": "placeholderId",
    "LazyUnmount": false,
    "LoadState": "",
    "Result": "",
    "SubState": "",
    "Type": "",
    "UnitFileState": "",
    "UnitType": "mount",
    "What": "",
    "Where": "",
  },
}
`;

exports[`Test given properties via argument calls should call with other properties while given other unit type 1`] = `
Object {
  "otherUnit.other": Object {
    "ActiveEnterTimestamp": "",
    "ActiveEnterTimestampMonotonic": "",
    "ActiveState": "",
    "Description": "",
    "Id": "placeholderId",
    "LoadState": "",
    "Result": "",
    "SubState": "",
    "UnitFileState": "",
    "UnitType": "other",
  },
}
`;

exports[`Test given properties via argument calls should call with service properties while given implied service unit 1`] = `
Object {
  "impliedService.service": Object {
    "ActiveEnterTimestamp": "",
    "ActiveEnterTimestampMonotonic": "",
    "ActiveState": "",
    "CleanResult": "",
    "Description": "",
    "Id": "placeholderId",
    "LoadState": "",
    "MainPID": 0,
    "MemoryCurrent": 0,
    "Nice": 0,
    "RemainAfterExit": false,
    "Restart": "",
    "Result": "",
    "SubState": "",
    "TasksCurrent": "",
    "Type": "",
    "UnitFileState": "",
    "UnitType": "service",
  },
}
`;

exports[`Test given properties via argument calls should call with service properties while given plain service unit 1`] = `
Object {
  "plainService.service": Object {
    "ActiveEnterTimestamp": "",
    "ActiveEnterTimestampMonotonic": "",
    "ActiveState": "",
    "CleanResult": "",
    "Description": "",
    "Id": "placeholderId",
    "LoadState": "",
    "MainPID": 0,
    "MemoryCurrent": 0,
    "Nice": 0,
    "RemainAfterExit": false,
    "Restart": "",
    "Result": "",
    "SubState": "",
    "TasksCurrent": "",
    "Type": "",
    "UnitFileState": "",
    "UnitType": "service",
  },
}
`;

exports[`Test given properties via argument calls should call with service properties while given service unit with additional properties 1`] = `
Object {
  "additionalService.service": Object {
    "ActiveEnterTimestamp": "",
    "ActiveEnterTimestampMonotonic": "",
    "ActiveState": "",
    "CleanResult": "",
    "Description": "",
    "GuessMainPID": "",
    "Id": "placeholderId",
    "LoadState": "",
    "MainPID": 0,
    "MemoryCurrent": 0,
    "Nice": 0,
    "RemainAfterExit": false,
    "Restart": "",
    "Result": "",
    "SubState": "",
    "TasksCurrent": "",
    "Type": "",
    "UnitFileState": "",
    "UnitType": "service",
  },
}
`;

exports[`Test given properties via argument calls should call with slice properties while given plain slice unit 1`] = `
Object {
  "plainSlice.slice": Object {
    "ActiveEnterTimestamp": "",
    "ActiveEnterTimestampMonotonic": "",
    "ActiveState": "",
    "Description": "",
    "Id": "placeholderId",
    "LoadState": "",
    "Result": "",
    "SubState": "",
    "TasksCurrent": "",
    "UnitFileState": "",
    "UnitType": "slice",
  },
}
`;

exports[`Test given properties via argument calls should call with slice properties while given slice unit with additional properties 1`] = `
Object {
  "additionalSlice.slice": Object {
    "ActiveEnterTimestamp": "",
    "ActiveEnterTimestampMonotonic": "",
    "ActiveState": "",
    "ControlGroup": "",
    "Description": "",
    "Id": "placeholderId",
    "LoadState": "",
    "Result": "",
    "SubState": "",
    "TasksCurrent": "",
    "UnitFileState": "",
    "UnitType": "slice",
  },
}
`;
